--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>猎云网 | 首页</title>
 	<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+	<link href="http://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 
